# tiago_grasp

./: CMakeLists.txt  package.xml
classes/: alignProcessing.cpp  alignTarget.cpp  arm_class.cpp  arm_nodes.cpp  binSegmentation.cpp  binsegmentation.cpp  entropy.cpp  entropyOut.cpp  findTarget.cpp  gripper_class.cpp  gripper_nodes.cpp  other_nodes.cpp  pointcloud_node.cpp  pointpose.cpp  pointposeOut.cpp  wmSegmentation.cpp
include/: alignProcessing.h  alignTarget.h  arm_class.h  arm_nodes.h  binsegmentation.h  entropy.h  entropyOut.h  findTarget.h  gripper_class.h  gripper_nodes.h  other_nodes.h  pointcloud_node.h  pointpose.h  pointposeOut.h  wmSegmentation.h
launch/: behavior.launch
src/: arm_sequence.cpp  clothes_recovery_sequence.cpp  cloud_sequence.cpp  full_sequence.cpp  gripper_sequence.cpp  test_arm_nodes.cpp  tree.xml
